--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
   display: flex;
   align-items: center;
   background: var(--color-secondary);
+      border-bottom: 1px solid white;
 }
 .left-container {
   width: 50%;
@@ -86,7 +87,7 @@ body {
 }
 .middle-container {
   padding: 24px 32px 32px 32px;
-  width: calc(100vw - 64px);
+  /* width: calc(100vw - 64px); */
   background: var(--color-primary);
 }
 .text-1 {
@@ -247,6 +248,6 @@ body {
   }
   .middle-container {
     padding: 24px 20px 32px 20px;
-    width: calc(100vw - 40px);
+    /* width: calc(100vw - 40px); */
   }
 }
